
* #10482: mark the Stream and Genlex modules as deprecated, in preparation
  for a future removal.  These modules (without deprecation alert)
  are now provided by the camlp-streams library.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #10526: add Random.bits32, Random.bits64, Random.nativebits
  (Xavier Leroy, review by Gabriel Scherer and François Bobot)

* #10568: remove Obj.marshal and Obj.unmarshal
  (these functions have been deprecated for a while and are superseded
   by the functions from module Marshal)
  (François Pottier, review by Gabriel Scherer and Kate Deplaix)

- #10545: Add In_channel and Out_channel modules.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Simon Cruanes, Gabriel Scherer,
  Guillaume Munch-Maccagnoni, Alain Frisch and Xavier Leroy)

### Other libraries:

- #10192: Add support for Unix domain sockets on Windows and use them
  to emulate Unix.socketpair (only available on Windows 1803+)
  (Antonin Décimo, review by David Allsopp)

- #10469: Add Thread.set_uncaught_exception_handler and
  Thread.default_uncaught_exception_handler.
  (Enguerrand Decorne, review by David Allsopp)

### Tools:

- #3959, #7202, #10476: ocaml, in script mode, directive errors
  (`#use "missing_file";;`) use stderr and exit with an error.
  (Florian Angeletti, review by Gabriel Scherer)

- #10524: Directive argument type error now shows expected and received type.
  (Wiktor Kuchta, review by Gabriel Scherer)

- #10560: Disable colors if the env variable `NO_COLOR` is set.  If
  `OCAML_COLOR` is set, its setting takes precedence over `NO_COLOR`.
  (Nicolás Ojeda Bär, report by Gabriel Scherer, review by Daniel Bünzli,
  Gabriel Scherer and David Allsopp)

- #10565: Toplevel value printing: truncate strings only after 8 bytes.
  (Wiktor Kuchta, review by Xavier Leroy)

### Debugging:

- #10517, #10594: when running ocamldebug on a program linked with the
  threads library, don't fail immediately; instead, allow debugging